<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
...
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ListView
        android:id="@+id/languageList"
        android:layout_width="113dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:listSelector="@drawable/list_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"/>

    <Button
        android:id="@+id/RegisterForFriend"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/register_contractor"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/languageList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterForSelf" />

    <Button
        android:id="@+id/RegisterForSelf"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
...
        android:textColor="#FB785B"
        app:layout_constraintEnd_toStartOf="@+id/languageList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterForFriend" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_selector"
        android:clickable="true"
...
